--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools>=44.0.0", "setuptools_scm[toml]>=3.4.3"]
 build-backend = "setuptools.build_meta"
 
+[project]
+dynamic = ["version"]
+
 [tool.setuptools_scm]
 local_scheme = "no-local-version"
 write_to = "open_mzm_rando/version.py"
