--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = open-mam-rando
+name = open-mzm-rando
 description = An open source randomizer patcher for Metroid: Zero Mission.
 long_description = file: README.md
 long_description_content_type = text/markdown
